src/test/ui/error-codes/E0023.stderr
error[E0023]: this pattern has 1 field, but the corresponding tuple variant has 2 fields
  --> $DIR/E0023.rs:11:9
   |
LL |     Apple(String, String),
   |     --------------------- tuple variant defined here
...
LL |         Fruit::Apple(a) => {},
   |         ^^^^^^^^^^^^^^^ expected 2 fields, found 1
   |
help: use `_` to explicitly ignore each field
   |
LL |         Fruit::Apple(a, _) => {},
   |                       ^^^

error[E0023]: this pattern has 3 fields, but the corresponding tuple variant has 2 fields
  --> $DIR/E0023.rs:12:9
   |
LL |     Apple(String, String),
   |     --------------------- tuple variant defined here
...
LL |         Fruit::Apple(a, b, c) => {},
   |         ^^^^^^^^^^^^^^^^^^^^^ expected 2 fields, found 3

error[E0023]: this pattern has 2 fields, but the corresponding tuple variant has 1 field
  --> $DIR/E0023.rs:13:9
   |
LL |     Pear(u32),
   |     --------- tuple variant defined here
...
LL |         Fruit::Pear(1, 2) => {},
   |         ^^^^^^^^^^^^^^^^^ expected 1 field, found 2

error[E0023]: this pattern has 2 fields, but the corresponding tuple variant has 1 field
  --> $DIR/E0023.rs:14:9
   |
LL |     Orange((String, String)),
   |     ------------------------ tuple variant defined here
...
LL |         Fruit::Orange(a, b) => {},
   |         ^^^^^^^^^^^^^^^^^^^ expected 1 field, found 2
   |
help: missing parentheses
   |
LL |         Fruit::Orange((a, b)) => {},
   |                       ^    ^

error[E0023]: this pattern has 0 fields, but the corresponding tuple variant has 1 field
  --> $DIR/E0023.rs:15:9
   |
LL |     Banana(()),
   |     ---------- tuple variant defined here
...
LL |         Fruit::Banana() => {},
   |         ^^^^^^^^^^^^^^^ expected 1 field, found 0
   |
help: missing parentheses
   |
LL |         Fruit::Banana(()) => {},
   |                      ^  ^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0023`.
